--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <section class="container">
     <h2 id="titulo-form">Adicionar novo paciente</h2>
-    <form>
+    <form id="form-adiciona">
         <div class="">
             <label for="nome">Nome:</label>
             <input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
@@ -101,5 +101,6 @@
 
 		<!-- Importação dos Javascripts AQUI -->
 		<script src="js/principal.js"></script>
+		<script src="js/form.js"></script>
 	</body>
 </html>
