--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
-		
+
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
@@ -33,7 +33,7 @@
 					<tbody id="tabela-pacientes">
 						<tr class="paciente">
 							<td class="info-nome">Paulo</td>
-							<td class="info-peso">10000</td>
+							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
@@ -100,7 +100,7 @@
 </section>
 
 		<!-- Importação dos Javascripts AQUI -->
-		<script src="js/principal.js"></script>
+		<script src="js/calculaImc.js"></script>
 		<script src="js/form.js"></script>
 	</body>
 </html>
